--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,72 @@
-h1 {
-  color: red;
+@font-face {
+  font-weight: normal;
+  font-family: "Gilroy";
+  src: url(../fonts/Gilroy-Regular.woff) format('woff');
+}
+
+@font-face {
+  font-weight: bold;
+  font-family: "Gilroy";
+  src: url(../fonts/Gilroy-Extrabold.woff) format('woff');
+}
+
+@font-face {
+  font-weight: lighter;
+  font-family: "Gilroy";
+  src: url(../fonts/Gilroy-Light.woff) format('woff');
+}
+
+.slider {
+  position: relative;
+
+  width: 1024px;
+  height: 768px;
+
+  margin: 0;
+
+  user-select: none;
+  touch-action: pan-y;
+}
+
+.logo {
+  position: absolute;
+  bottom: 10px;
+  left: 70px;
+}
+
+.slider img {
+  pointer-events: none;
+}
+
+.slider-coll {
+  width: 1024px;
+  height: 768px;
+  overflow: hidden;
+}
+
+.slides {
+  width: 3072px;
+  background-image: url("../img/background.png");
+  display: flex;
+  transition: 0.5s;
+}
+
+.slide {
+  width: 1024px;
+  height: 768px;
+
+  display: flex;
+  flex-shrink: 0;
+}
+
+.slide-1 {
+  
+}
+
+.slide-2 {
+
+}
+
+.slide-3 {
+
 }
