--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -87,7 +87,7 @@ h1 {
 
 .btn-next {
   right: 110px;
-  bottom: 210px;
+  bottom: 208px;
 }
 
 .slider img {
@@ -118,7 +118,7 @@ h1 {
   flex-direction: column;
   justify-content: left;
   text-align: left;
-  padding: 150px 50px 0 70px;
+  padding: 130px 50px 0 70px;
 }
 
 .title {
@@ -126,7 +126,7 @@ h1 {
   text-transform: uppercase;
   letter-spacing: 0.1em;
 
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
 
 .pink-sperm-1 {
@@ -190,7 +190,7 @@ h1 {
   width: 700px;
   height: 360px;
   
-  margin-top: 35px;
+  margin-top: 20px;
   margin-left: 0;
   padding: 0px 80px 30px 70px;
 
@@ -202,7 +202,7 @@ h1 {
 .background-box {
   position: absolute;
 
-  top: 280px;
+  top: 265px;
   left: 130px;
 
   width: 770px;
@@ -219,8 +219,8 @@ h1 {
 .background-box::before {
   display: block;
   position: absolute;
-  top: 10px;
-  left: -53px;
+  top: 13px;
+  left: -52px;
 
   width: 4px;
   height: 97%;
@@ -241,4 +241,39 @@ h1 {
 
 .message-box p {
   font: 20px/1.5 "DINPro", sans-serif;
+}
+
+.sperm-1 {
+  position: absolute;
+  top: 100px;
+  left: 360px;
+  z-index: -2;
+}
+
+.sperm-2 {
+  position: absolute;
+  top: 100px;
+  left: 570px;
+  z-index: -2;
+}
+
+.sperm-3 {
+  position: absolute;
+  top: 75px;
+  left: 710px;
+  z-index: -2;
+}
+
+.sperm-4 {
+  position: absolute;
+  bottom: 138px;
+  right: -85px;
+  z-index: -2;
+}
+
+.sperm-5 {
+  position: absolute;
+  bottom: 125px;
+  right: -430px;
+  z-index: -2;
 }
