--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -42,9 +42,8 @@ body {
 h1 {
   margin-top: 0;
 
-  font: 100px/1.2 "Gilroy", sans-serif;
+  font: lighter 100px/1.2 "Gilroy", sans-serif;
 
-  font-weight: lighter;
   letter-spacing: 0.1em;
   text-transform: uppercase;
 }
@@ -98,7 +97,7 @@ h1 {
   display: flex;
   width: 3072px;
   background-image: url("../img/background.png");
-  transition: 2s;
+  transition: 1s;
 }
 
 .slide {
@@ -113,10 +112,7 @@ h1 {
 
 .content-box {
   position: relative;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: left;
+  
   text-align: left;
   padding: 130px 50px 0 70px;
 }
@@ -125,8 +121,16 @@ h1 {
   font: 26px "DINPro", sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.1em;
-
+  
   margin-bottom: 30px;
+}
+
+.margin-bottom-10 {
+  margin-bottom: 10px;
+}
+
+.padding-top-155 {
+  padding-top: 155px;
 }
 
 .pink-sperm-1 {
@@ -190,7 +194,7 @@ h1 {
   width: 700px;
   height: 360px;
   
-  margin-top: 20px;
+  margin-top: 55px;
   margin-left: 0;
   padding: 0px 80px 30px 70px;
 
@@ -277,3 +281,145 @@ h1 {
   right: -430px;
   z-index: -2;
 }
+
+.brand-name {
+  position: absolute;
+  top: 140px;
+  left: 345px;
+
+  font: lighter 95px/1.2 "Gilroy", sans-serif;
+
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+
+  z-index: 2;
+}
+
+.bottle {
+  position: absolute;
+  bottom: 0;
+  left: 50px;
+
+  z-index: 2;
+}
+
+.keymessage-box {
+  position: relative;
+  margin-top: 180px;
+  margin-left: 350px;
+}
+
+.columns-2 {
+  columns: 2;
+  column-gap: 70px;
+
+  margin-top: 140px;
+}
+
+.keymessage-box p {
+  margin-top: 15px;
+  font: 28px/1.2 "DINPro", sans-serif;
+}
+
+.btn-about {
+  position: absolute;
+  left: 330px;
+  bottom: -20px;
+}
+
+.keymessage-box::after {
+  position: absolute;
+
+  left: -100px;
+  bottom: -15px;
+
+  width: 400px;
+  height: 290px;
+
+  background: #fff;
+  box-shadow: 0 0 30px 2px #dad9da;
+  border-radius: 40px;
+
+  content: '';
+
+  z-index: -1;
+}
+
+.keymessage-box::before {
+  position: absolute;
+
+  left: 335px;
+  bottom: 105px;
+
+  width: 265px;
+  height: 170px;
+
+  background: #fff;
+  box-shadow: 0 0 30px 2px #dad9da;
+  border-radius: 40px;
+
+  content: '';
+
+  z-index: -1;
+}
+
+.background-dark {
+  width: 100%;
+  background: #16273e;
+  opacity: 0.7;
+}
+
+.advantage-box {
+  position: relative;
+
+  width: 610px;
+  height: 530px;
+  margin-top: 130px;
+  margin-left: 160px;
+
+  padding-top: 20px;
+  padding-left: 190px;
+
+  border-radius: 40px;
+
+  background: #fff;
+}
+
+.btn-close {
+  position: absolute;
+
+  top: 38px;
+  right: 30px;
+}
+
+.btn-left {
+  position: unset;
+}
+
+.btn-right {
+  position: unset;
+  transform: scale(-1, 1);
+}
+
+.button-box {
+  position: absolute;
+  bottom: 30px;
+}
+
+.adv-list {
+  font: 23px/1.3 "DINPro", sans-serif;
+
+  margin-top: 130px;
+  padding-right: 150px;
+}
+
+.item-number {
+  font: bold 23px/1 "Gilroy", sans-serif;
+  color: #8cc9e8;
+}
+
+.adv-list p {
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
