--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -141,21 +141,55 @@ h1 {
 
 .pink-sperm-2 {
   position: absolute;
-  top: 165px;
+  top: 175px;
   right: 0;
+}
+
+@-webkit-keyframes bakt1 {
+  from {
+    -webkit-transform: translate(-10%, -20%);
+  }
+  to {
+    -webkit-transform: translate(30%, 60%);
+  }
 }
 
 .bakt-1 {
   position: absolute;
   bottom: 185px;
   left: 25px;
+
+  -webkit-animation: 'bakt1' 5s infinite alternate linear;
+
   z-index: -1;
+}
+
+@-webkit-keyframes bakt2 {
+  from {
+    -webkit-transform: scale(0.9) rotate(0deg) translate(0, 0);
+  }
+  25% {
+    -webkit-transform: scale(1.0) rotate(90deg) translate(-70%, 120%);
+  }
+  50% {
+    -webkit-transform: scale(1.1) rotate(180deg) translate(80%, 0%);
+  }
+  75% {
+    -webkit-transform: scale(1.2) rotate(270deg) translate(70%, 20%);
+  }
+  to {
+    -webkit-transform: scale(0.9) rotate(360deg) translate(0, 0);
+  }
 }
 
 .bakt-2 {
   position: absolute;
   top: 210px;
   right: 60px;
+
+  -webkit-animation: 'bakt2' 40s infinite normal linear;
+
+  z-index: 2;
 }
 
 .bakt-3 {
@@ -164,10 +198,21 @@ h1 {
   left: -45px;
 }
 
+@-webkit-keyframes bakt4 {
+  from {
+    -webkit-transform: translate(50%, 70%);
+  }
+  to {
+    -webkit-transform: translate(-25%, -15%);
+  }
+}
+
 .bakt-4 {
   position: absolute;
   top: 70px;
   right: 250px;
+
+  -webkit-animation: 'bakt4' 5s infinite alternate linear;
 }
 
 .bakt-5 {
@@ -182,10 +227,24 @@ h1 {
   left: 350px;
 }
 
+@-webkit-keyframes baktbig {
+  from {
+    -webkit-transform: scale(1.2) rotate(0deg) translate(-10%, -5%);
+  }
+  50% {
+    -webkit-transform: scale(1.1) rotate(5deg) translate(-5%, -3%);
+  }
+  to {
+    -webkit-transform: scale(1) rotate(0deg) translate(0, 0);
+  }
+}
+
 .bakt-big {
   position: absolute;
   right: 260px;
   bottom: -100px;
+
+  -webkit-animation: 'baktbig' 6s infinite alternate linear;
 }
 
 .message-box {
@@ -247,10 +306,34 @@ h1 {
   font: 20px/1.5 "DINPro", sans-serif;
 }
 
+@-webkit-keyframes sperm {
+  from {
+    opacity: 0;
+    -webkit-transform: translate(50%, 70%);
+  }
+  10% {
+    opacity: 0;
+    -webkit-transform: translate(50%, 70%);
+  }
+  30% {
+    opacity: 1;
+    -webkit-transform: translate(0, 0);
+  }
+  80% {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
 .sperm-1 {
   position: absolute;
   top: 100px;
   left: 360px;
+
+  -webkit-animation: 'sperm' 13s infinite normal ease-out;
+
   z-index: -2;
 }
 
@@ -258,6 +341,9 @@ h1 {
   position: absolute;
   top: 100px;
   left: 570px;
+
+  -webkit-animation: 'sperm' 13s infinite normal ease-out;
+
   z-index: -2;
 }
 
@@ -265,6 +351,9 @@ h1 {
   position: absolute;
   top: 75px;
   left: 710px;
+
+  -webkit-animation: 'sperm' 13s infinite normal ease-out;
+
   z-index: -2;
 }
 
@@ -272,6 +361,9 @@ h1 {
   position: absolute;
   bottom: 138px;
   right: -85px;
+
+  -webkit-animation: 'sperm' 13s infinite normal ease-out;
+
   z-index: -2;
 }
 
@@ -279,6 +371,9 @@ h1 {
   position: absolute;
   bottom: 125px;
   right: -430px;
+
+  -webkit-animation: 'sperm' 13s infinite normal ease-out;
+
   z-index: -2;
 }
 
